# agent-cid-py

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
docs/: architecture.md
examples/: quickstart.py
src/agent_cid/: __init__.py  build.py  canonical.py  cid.py  did.py  did_web.py  sign.py  types.py  verify.py
tests/: test_conformance.py  test_unit.py
vectors/: c1-roundtrip.json  c2-tampered-body.json  c3-parent-chain.json  c4-canonical.json  c5-did-web.json
