[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-cid"
version = "0.1.0"
description = "Content-addressed artifact manifest for AI agents (Python port of @p-vbordei/agent-cid)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Vlad Bordei", email = "bordeivlad@gmail.com" }]
requires-python = ">=3.10"
keywords = ["agent", "cid", "manifest", "ed25519", "did", "jcs", "rfc8785", "multiformats"]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
  "cryptography>=42.0",
  "jcs>=0.2.1",
  "base58>=2.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/p-vbordei/agent-cid-py"
Reference = "https://github.com/p-vbordei/agent-cid"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cid"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
